# autonomous_agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  __init__.py  docker-compose.yml  pyproject.toml  requirements.txt
api/: main.py
automation/: __init__.py  execution.py  workflow.py
core/: __init__.py  agent.py  llm.py
frontend/: app.js  index.html  styles.css
memory/: __init__.py
planning/: __init__.py
processes/: __init__.py
safety/: __init__.py
tests/: test_agent.py  test_sql_tools.py  test_tools.py
tool_prompts/: aggregate_data.json
tools/: __init__.py  builtin.py  industry.py
